Add personal information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="profile-image img-fluid float-left" width="200" src="assets/images/profile.jpeg" alt="Jason Jacobs" />
             <div class="profile-content float-left">
                <h1 class="name">Jason Jacobs</h1>
-               <h2 class="desc">Agile Coach / Full Stack / Entrepreneur</h2>
+               <h2 class="desc">Junior Software Engineer - Python</h2>
                <ul class="social list-inline">
                   <li class="list-inline-item"><a href="https://twitter.com/jrj2280" target="_blank"><i class="fab fa-twitter"></i></a></li>
                   <li class="list-inline-item"><a href="https://www.linkedin.com/in/jason-jacobs-12b814103/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
@@ -46,7 +46,8 @@
                      <h2 class="heading">About Me</h2>
                      <div class="content">
                         <p>
-                           Software engineer (Python / Node / Java), craftsman, XP advocate, agile technical coach, product (discovery, delivery, management, owner) curious, data miner, believer in growth mindset, multiplier, servant leader, was a VP of Engineering, individual contributor, speaker, and fierce learner
+                            Entry level technology professional looking for an opportunity to contribute, learn, and grow as a
+                            software engineer, quality assurance analyst, tier 1 support, or similar roles with an organization.
                         </p>
                      </div>
                   </div>
@@ -219,8 +220,8 @@
                      <h2 class="heading sr-only">Basic Information</h2>
                      <div class="content">
                         <ul class="list-unstyled">
-                           <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Medina, US</li>
-                           <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">jus.beall@gmail.com</a></li>
+                           <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Wooster, US</li>
+                           <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">jrj92280@gmail.com</a></li>
                         </ul>
                      </div>
                      <!--//content-->  
