--- a/index.html
+++ b/index.html
@@ -224,61 +224,64 @@
                            <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">jrj92280@gmail.com</a></li>
                         </ul>
                      </div>
-                     <!--//content-->  
                   </div>
-                  <!--//section-inner-->                 
                </aside>
-               <!--//aside-->
                <aside class="skills aside section">
                   <div class="section-inner">
                      <h2 class="heading">Skills</h2>
                      <div class="content">
-                        <p class="intro">
-                           Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.
-                        </p>
                         <div class="skillset">
-                           <div class="item">
-                              <h3 class="level-title">Python &amp; Django<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
-                              <div class="level-bar">
-                                 <div class="level-bar-inner" data-level="96%">
-                                 </div>
-                              </div>
-                              <!--//level-bar-->                                 
-                           </div>
-                           <!--//item-->
-                           <div class="item">
-                              <h3 class="level-title">Javascript &amp; jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
-                              <div class="level-bar">
-                                 <div class="level-bar-inner" data-level="96%">
-                                 </div>
-                              </div>
-                              <!--//level-bar-->                                 
-                           </div>
-                           <!--//item-->
-                           <div class="item">
-                              <h3 class="level-title">HTML5, CSS3, SASS &amp; LESS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
-                              <div class="level-bar">
-                                 <div class="level-bar-inner" data-level="96%">
-                                 </div>
-                              </div>
-                              <!--//level-bar-->                                 
-                           </div>
-                           <!--//item-->
-                           <div class="item">
-                              <h3 class="level-title">Ruby on Rails<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
-                              <div class="level-bar">
-                                 <div class="level-bar-inner" data-level="85%">
-                                 </div>
-                              </div>
-                              <!--//level-bar-->                                 
-                           </div>
-                           <!--//item-->
-                           <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Coderwall</a></p>
+                           <span class="skill-badge badge badge-pill badge-primary">Python</span>
+                           <span class="skill-badge badge badge-pill badge-primary">Node.js</span>
+                           <span class="skill-badge badge badge-pill badge-primary">Java</span>
+                           <span class="skill-badge badge badge-pill badge-primary">HTML/CSS</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Ruby</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">.NET</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">C/C++</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Progress4GL</span>
+                        </div>
+                        <hr />
+                        <div class="skillset">
+                           <span class="skill-badge badge badge-pill badge-success">Agile Methodologies</span>
+                           <span class="skill-badge badge badge-pill badge-success">Agile Coach</span>
+                           <span class="skill-badge badge badge-pill badge-success">Leadership</span>
+                           <span class="skill-badge badge badge-pill badge-success">Software Development</span>
+                           <span class="skill-badge badge badge-pill badge-success">DevOps</span>
+                           <span class="skill-badge badge badge-pill badge-success">Test Driven Development</span>
+                           <span class="skill-badge badge badge-pill badge-success">Collaborative (Mob/Pair) Programming</span>
+                           <span class="skill-badge badge badge-pill badge-success">BDD/ATDD</span>
+                           <span class="skill-badge badge badge-pill badge-success">Refactoring</span>
+
+                           <span class="skill-badge badge badge-pill badge-success">React.js</span>
+
+                           <span class="skill-badge badge badge-pill badge-success">Integrations</span>
+                           <span class="skill-badge badge badge-pill badge-success">Data Mining</span>
+                           <span class="skill-badge badge badge-pill badge-success">Machine Learning</span>
+                           <span class="skill-badge badge badge-pill badge-success">NLP</span>
+
+                           <span class="skill-badge badge badge-pill badge-success">SQL</span>
+                           <span class="skill-badge badge badge-pill badge-success">NoSQL</span>
+                           <span class="skill-badge badge badge-pill badge-success">PaaS</span>
+                           <span class="skill-badge badge badge-pill badge-success">Cloud</span>
+                           <span class="skill-badge badge badge-pill badge-success">Serverless</span>
+                           <span class="skill-badge badge badge-pill badge-success">NoSQL</span>
+                           <span class="skill-badge badge badge-pill badge-success">NoSQL</span>
+
+                           <span class="skill-badge badge badge-pill badge-info">Entrepreneur</span>
+                           <span class="skill-badge badge badge-pill badge-info">IoT</span>
+                           <span class="skill-badge badge badge-pill badge-info">Data Governance</span>
+                           <span class="skill-badge badge badge-pill badge-info">Computer Vision</span>
+
+                           <span class="skill-badge badge badge-pill badge-info">Lean Startup</span>
+                           <span class="skill-badge badge badge-pill badge-info">Lean UX</span>
+
+                           <span class="skill-badge badge badge-pill badge-info">Product Discovery</span>
+                           <span class="skill-badge badge badge-pill badge-info">Product Design</span>
+                           <span class="skill-badge badge badge-pill badge-info">Product Prototyping</span>
+                           <span class="skill-badge badge badge-pill badge-info">Product Management</span>
                         </div>
                      </div>
-                     <!--//content-->  
                   </div>
-                  <!--//section-inner-->                 
                </aside>
                <!--//section-->
                <aside class="testimonials aside section">
