Update Git graph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="description" content="Jason Jacobs - jrj92280.github.io">
       <meta name="author" content="Jason Jacobs">
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-      <link href='https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Avenir:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
       <link href='https://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
       <!-- FontAwesome JS -->
       <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
@@ -197,23 +197,14 @@
                <!--//section-->
                <section class="github section">
                   <div class="section-inner">
-                     <h2 class="heading">My Gitub</h2>
-                     <p>You can embed your GitHub contribution graph calendar using IonicaBizau's <a href="github.com/jrj92280" target="github.com/jrj92280">GitHub Calendar</a> widget. 
+                     <h2 class="heading">My GitHub</h2>
                      <div id="github-graph" class="github-graph">
                      </div>
-                     <!--//github-graph-->
-                     <p>
-                        You can also embed your GitHub activities using Jason Jacobs <a href="github.com/jrj92280" target="github.com/jrj92280">GitHub Activity Stream</a> widget.        
-                        <!--//Usage: https://caseyscarborough.com/projects/github-activity/ -->                       
                      <div id="ghfeed" class="ghfeed">
                      </div>
-                     <!--//ghfeed-->
                   </div>
-                  <!--//secton-inner-->
                </section>
-               <!--//section-->
             </div>
-            <!--//primary-->
             <div class="secondary col-lg-4 col-12">
                <aside class="info aside section">
                   <div class="section-inner">
@@ -226,6 +217,7 @@
                      </div>
                   </div>
                </aside>
+               <!--//aside-->
                <aside class="skills aside section">
                   <div class="section-inner">
                      <h2 class="heading">Skills</h2>
