--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
                         </div>
                         <!--//item-->
                         <div class="item">
-                           <h3 class="Ballotpedia">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
+                           <h3 class="Ballotpedia">Ballotpedia - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
                            <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                         </div>
                         <!--//item-->
                         <div class="item">
-                           <h3 class="Medasync">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
+                           <h3 class="Medasync">Medasync - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
                            <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
                         </div>
                         <div class="item">
-                           <h3 class="Network Watchdog">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
+                           <h3 class="Network Watchdog">Network Watchdog - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
                            <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
                         </div>
                         <!--//item-->
