--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                            <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                         </div>
                         <!--//item-->
-                        <div class="item">
+                        <div class="item"></div>
                            <h3 class="Ballotpedia">Ballotpedia - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
                            <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                         </div>
@@ -228,13 +228,12 @@
                      <div class="content">
                         <div class="skillset">
                            <span class="skill-badge badge badge-pill badge-primary">Python</span>
-                           <span class="skill-badge badge badge-pill badge-primary">Node.js</span>
-                           <span class="skill-badge badge badge-pill badge-primary">Java</span>
+                           <span class="skill-badge badge badge-pill badge-primary">Server</span>
+                           <span class="skill-badge badge badge-pill badge-primary">java</span>
                            <span class="skill-badge badge badge-pill badge-primary">HTML/CSS</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">Ruby</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">.NET</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">C/C++</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">Progress4GL</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Bartender</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Sales</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Constrution</span>
                         </div>
                         <hr />
                         <div class="skillset">
