--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                            <span class="skill-badge badge badge-pill badge-primary">HTML/CSS</span>
                            <span class="skill-badge badge badge-pill badge-secondary">Bartender</span>
                            <span class="skill-badge badge badge-pill badge-secondary">Sales</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">Constrution</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Consturtion</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Progress4GL</span>
                         </div>
                         <hr />
                         <div class="skillset">
