--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                      <h2 class="heading">Education</h2>
                      <div class="content">
                         <div class="item">
-                           <h3 class="title"><i class="fas fa-graduation-cap"></i> MSc Computer Science</h3>
-                           <h4 class="university">University College London <span class="year">(2011-2012)</span></h4>
+                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Self taugth</h3>
+                           <h4 class="university">Mentor Justin Beall <span class="year">(5/2/2018 to current)</span></h4>
                         </div>
                         <!--//item-->
                         <div class="item">
