--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
                      <h2 class="heading">Education</h2>
                      <div class="content">
                         <div class="item">
-                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Self taugth</h3>
+                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Self Taught </h3>
                            <h4 class="university">Mentor Justin Beall <span class="year">(5/2/2018 to current)</span></h4>
                         </div>
                         <!--//item-->
                         <div class="item">
-                           <h3 class="title"><i class="fas fa-graduation-cap"></i> BSc Computer Science</h3>
-                           <h4 class="university">University of Bristol <span class="year">(2008-2011)</span></h4>
+                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Marketing</h3>
+                           <h4 class="university">Kent Stark <span class="year">(2003 to 2004)</span></h4>
                         </div>
                         <!--//item-->
                      </div>
