--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                      <h2 class="heading">Education</h2>
                      <div class="content">
                         <div class="item">
-                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Self Taught </h3>
+                           <h3 class="title"><i class="fas fa-graduation-cap"></i> Self Taught, Skiplist School </h3>
                            <h4 class="university">Mentor Justin Beall <span class="year">(5/2/2018 to current)</span></h4>
                         </div>
                         <!--//item-->
@@ -329,8 +329,8 @@
                            </li>
                            <!--//item-->
                            <li class="item">
-                              <span class="title"><strong>Spanish:</strong></span>
-                              <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star-half"></i></span>
+                              <span class="title"><strong>German:</strong></span>
+                              <span class="level">Some German <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star-half"></i></span>
                            </li>
                            <!--//item-->
                         </ul>
