--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                <!--//section-->
                <section class="projects section">
                   <div class="section-inner">
-                     <h2 class="heading">Other Projects</h2>
+                     <h2 class="heading">Work Experience</h2>
                      <div class="content">
                         <div class="item">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank">Pillar - Free Bootstrap 4 Resume/CV Template for Developers</a> <span class="badge badge-theme">Free</span></h3>
@@ -172,7 +172,7 @@
                <!--//section-->
                <section class="experience section">
                   <div class="section-inner">
-                     <h2 class="heading">Work Experience</h2>
+                     <h2 class="heading">Work Experience Projects</h2>
                      <div class="content">
                         <div class="item">
                            <h3 class="Apprentice at Skiplist">Apprentice at Skiplist - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
