--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <!--//item-->
                         <div class="item">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/nova-bootstrap-landing-page-template-for-mobile-apps/" target="_blank">Programing for 1 year</a> <span class="badge badge-theme">Free</span></h3>
-                           <p class="summary">I have been working with my brother, Justin Beall, my mentor Since May 4 of 2018. Down bellow is work we did for customers and I actually got payed for. </p>
+                           <p class="summary">I have been working with my brother, Justin Beall, my mentor Since May 4 of 2018. Down below is work we did for customers and I actually got payed for. </p>
                            <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/nova-bootstrap-landing-page-template-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
                         </div>
                         <!--//item-->
