Skiplist school update

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                      <div class="content">
                         <div class="item">
                            <h3 class="Apprentice at Skiplist">Apprentice at Skiplist - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
-                           <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                           <p>I have been working with my brother, Justin Beall, my mentor from 7:30 - 9:00 AM since April of 2018 to current time Monday through Friday and some weekends. </p>
                         </div>
                         <!--//item-->
                         <div class="item">
                            <h3 class="Ballotpedia">Ballotpedia - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
-                           <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+                           <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. les sagittis magna.</p>
                         </div>
                         <!--//item-->
                         <div class="item">
