--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                      <div class="content">
                         <div class="item">
                            <blockquote class="quote">
-                              <p><i class="fas fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                              <p><i class="fas fa-quote-left"></i>I am self taught and looking for the opportunity to show someone my drive and if given the chance you will see me shine </p>
                            </blockquote>
                            <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>
                         </div>
