--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                            <img class="img-fluid project-image" src="assets/images/project-4.png" alt="project name" />
                            </a>
                            <div class="desc col-md-8 col-12">
-                              <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Nova Pro - Bootstrap 4 Theme for Mobile Startups</a></h3>
+                              <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Texas Holdem</a></h3>
                               <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus.</p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
@@ -128,8 +128,8 @@
                            <img class="img-fluid project-image" src="assets/images/project-5.png" alt="project name" />
                            </a>
                            <div class="desc col-md-8 col-12">
-                              <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">Delta - Bootstrap 4 Theme for Promoting Mobile Apps</a></h3>
-                              <p class="mb-2"> You can put one of your secondary projects here. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
+                              <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">Jacobs Chess</a></h3>
+                              <p class="mb-2"> You can put one of your secondary projects here. </p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
                            <!--//desc-->                          
@@ -190,7 +190,7 @@
                         </div>
                         <div class="item">
                            <h3 class="Network Watchdog">Network Watchdog - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
-                           <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                           <p></p>
                         </div>
                         <!--//item-->
                      </div>
