--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                      <h2 class="heading">Conferences</h2>
                      <div class="content">
                         <ul class="list-unstyled">
-                           <li><i class="far fa-calendar-alt"></i> <a href="#" target="_blank">WWDC 2020</a> (San Francisco)</li>
+                           <li><i class="far fa-calendar-alt"></i> <a href="#" target="_blank">PyCon 2019</a> (Cleveland)</li>
                            <li><i class="far fa-calendar-alt"></i> <a href="#">Hive</a> (Seattle)</li>
                         </ul>
                      </div>
