--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                            </a>
                            <div class="desc col-md-8 col-12">
                               <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Texas Holdem</a></h3>
-                              <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus.</p>
+                              <p class="mb-2">Working on a Texas holdem game no quite complete yet.</p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
                            <!--//desc-->                          
@@ -129,7 +129,7 @@
                            </a>
                            <div class="desc col-md-8 col-12">
                               <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">Jacobs Chess</a></h3>
-                              <p class="mb-2"> You can put one of your secondary projects here. </p>
+                              <p class="mb-2"> Created a chess game.  </p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
                            <!--//desc-->                          
