--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                      <div class="content">
                         <div class="item featured text-center">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">Appify</a></h3>
-                           <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>
+                           <p class="summary">Web page for friends business</p>
                            <div class="featured-image has-ribbon">
                               <a href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">
                               <img class="img-fluid project-image" src="assets/images/project-featured.jpg" alt="project name" />
