Removed free on work experience

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                      <h2 class="heading">Work Experience</h2>
                      <div class="content">
                         <div class="item">
-                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank">Server for 20 years</a> <span class="badge badge-theme">Free</span></h3>
+                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank">Server for 20 years</a> </h3>
                            <p class="summary"></p>
                            <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
                         </div>
