Add cred to Ballotpedia

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                         <!--//item-->
                         <div class="item">
                            <h3 class="Ballotpedia">Ballotpedia - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
-                           <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. les sagittis magna.</p>
+                           <p>Content layout scheduling service.PythonFlask / MongoDB hosted in AWS Elastic Bean Stalk + Lambda scheduler
+                              - Contributed Python code via Png Pong pair programing and basic html/JavaScript</p>
                         </div>
                         <!--//item-->
                         <div class="item">
