Add cred for network watchdog

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </div>
                         <div class="item">
                            <h3 class="Network Watchdog">Network Watchdog - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
-                           <p></p>
+                           <p>Network throughput monitoring device + API + mobile app Nodejs Expressobin board code, Nodejs / MongoDB API hosted in Heroku, ReactNative Contributed via research while trouble shooting hardware boot loading, device network configuration, ReactNative mobile development, and Nodejs API</p>
                         </div>
                         <!--//item-->
                      </div>
