--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <!--//item-->
                         <div class="item">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank">Sales for 2 years</a> <span class="badge badge-theme">Free</span></h3>
-                           <p class="summary"> </p>
+                           <p class="summary">Below are the projects I got paid for. I also got paid for QA for 4 weeks and I was pushing to a private github. This is why there are so many days without a commits </p>
                            <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
                         </div>
                         <!--//item-->
