Got rid of one download and the other 2 free

--- a/index.html
+++ b/index.html
@@ -148,17 +148,17 @@
                         <div class="item">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank">Server for 20 years</a> </h3>
                            <p class="summary"></p>
-                           <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
+                           <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank"><i class="fas fa-external-link-alt"></i></a></p>
                         </div>
                         <!--//item-->
                         <div class="item">
-                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank">Sales for 2 years</a> <span class="badge badge-theme">Free</span></h3>
+                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank">Sales for 2 years</a> <span class="badge badge-theme"></span></h3>
                            <p class="summary">Below are the projects I got paid for. I also got paid for QA for 4 weeks and I was pushing to a private github. This is why there are so many days without a commits </p>
                            <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
                         </div>
                         <!--//item-->
                         <div class="item">
-                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/nova-bootstrap-landing-page-template-for-mobile-apps/" target="_blank">Programing for 1 year</a> <span class="badge badge-theme">Free</span></h3>
+                           <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/nova-bootstrap-landing-page-template-for-mobile-apps/" target="_blank">Programing for 1 year</a> <span class="badge badge-theme"></span></h3>
                            <p class="summary">I have been working with my brother, Justin Beall, my mentor Since May 4 of 2018. Down below is work we did for customers and I actually got payed for. </p>
                            <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/nova-bootstrap-landing-page-template-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
                         </div>
