--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                      <div class="content">
                         <div class="item">
                            <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank">Server for 20 years</a> </h3>
-                           <p class="summary"></p>
+                           <p class="summary">Excellent customer service experience, great at multi tasking and prioritizing </p>
                         </div>
                         <!--//item-->
                         <div class="item">
