Add management to pills

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                            <span class="skill-badge badge badge-pill badge-secondary">Bartender</span>
                            <span class="skill-badge badge badge-pill badge-secondary">Sales</span>
                            <span class="skill-badge badge badge-pill badge-secondary">Construction</span>
-                           <span class="skill-badge badge badge-pill badge-secondary">Progress4GL</span>
+                           <span class="skill-badge badge badge-pill badge-secondary">Management</span>
                         </div>
                         <hr />
                         <div class="skillset">
