Change status in conferences

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                      <div class="content">
                         <ul class="list-unstyled">
                            <li><i class="far fa-calendar-alt"></i> <a href="#" target="_blank">PyCon 2019</a> (Cleveland)</li>
-                           <li><i class="far fa-calendar-alt"></i> <a href="#">Hive</a> (Seattle)</li>
+                           <li><i class="far fa-calendar-alt"></i> <a href="#">Participated in convention</a> (Michigan)</li>
                         </ul>
                      </div>
                      <!--//content-->
