--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                            <img class="img-fluid project-image" src="assets/images/project-1.png" alt="project name" />
                            </a>
                            <div class="desc col-md-8 col-12">
-                              <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank">Instance - Bootstrap 4 Portfolio Theme for Aspiring Full Stack Developers</a></h3>
+                              <h3 class="title">Medasync<a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank">Instance - Bootstrap 4 Portfolio Theme for Aspiring Full Stack Developers</a></h3>
                               <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
@@ -117,7 +117,7 @@
                            </a>
                            <div class="desc col-md-8 col-12">
                               <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Texas Holdem</a></h3>
-                              <p class="mb-2">Working on a Texas holdem game no quite complete yet.</p>
+                              <p class="mb-2">Working on a Texas holdem game not quite complete yet.</p>
                               <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
                            <!--//desc-->                          
