--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                      <h2 class="heading sr-only">Basic Information</h2>
                      <div class="content">
                         <ul class="list-unstyled">
-                           <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Wooster, US</li>
+                           <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Wooster, Ohio</li>
                            <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">jrj92280@gmail.com</a></li>
                         </ul>
                      </div>
