Put chess game in find out more in Jacobs chess need work

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                            <div class="desc col-md-8 col-12">
                               <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">Jacobs Chess</a></h3>
                               <p class="mb-2"> Created a chess game.  </p>
-                              <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                              <p><a class="more-link" href=https://python-eve-jason.herokuapp.com/chess target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                            </div>
                            <!--//desc-->                          
                         </div>
